fix the clamp's name overflow

--- a/src/style/goldEdit.scss
+++ b/src/style/goldEdit.scss
@@ -51,7 +51,6 @@
   .clamp{
     .title{
       // display: flex;
-      height: 2em;
       line-height: 2em;
       font-size: 1.3em;
       font-weight: bold;
