--- a/src/style/mine.scss
+++ b/src/style/mine.scss
@@ -8,12 +8,12 @@
     background: #f5eee887;
   }
 }
-.suki{
-  .date{
-    color: #598f9e;
-    background: #365962;
-  }
-}
+// .suki{
+//   .date{
+//     color: #598f9e;
+//     background: #365962;
+//   }
+// }
 .date{
   font-size: 12px;
   width: 30%;
