--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -23,17 +23,17 @@ html.rose{
   }
 }
 
-html.suki{
-  background: hsl(192, 28%, 21%);
-  // color: #942A32;
+// html.suki{
+//   background: hsl(192, 28%, 21%);
+//   // color: #942A32;
 
-  #app {
-    color: #639AA9;
-  }
-  // header {
-  //   color: #e6afb1;
-  // }
-}
+//   #app {
+//     color: #639AA9;
+//   }
+//   // header {
+//   //   color: #e6afb1;
+//   // }
+// }
 
 
 
